--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chokidar": "^3.6.0",
     "concat-map": "^0.0.1",
     "debug": "^4.4.0",
+    "dotenv": "^16.4.7",
     "expres": "^0.0.5",
     "express": "^4.21.2",
     "fill-range": "^7.1.1",
@@ -24,6 +25,7 @@
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "minimatch": "^3.1.2",
+    "mongoose": "^8.9.6",
     "ms": "^2.1.3",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
